--- a/oldabout.html
+++ b/oldabout.html
@@ -122,20 +122,21 @@
                                         </div>
                                         <div class="flip-card-back">
                                             <div class="back-content middle">
-                                            <div class="flipsocial">
+                                                <div class="flipsocial">
                                                 <a href=""><i class="fab fa-twitter"></i></a>
                                                 <a href=""><i class="fab fa-facebook-f"></i></a>
                                                 <a href=""><i class="fab fa-linkedin-in"></i></a>
                                                 <a href="https://www.instagram.com/_.artiva_/?hl=en"><i class="fab fa-instagram"></i></a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                </div>
-                                <!-- image flip trying -->
+                            </div><!-- image flip trying -->
 
-                            </div>
+                        
                         </div>
+                    </div>
                         <div class="col-lg-7 col-md-6">
                             <div class="section-header">
                                 <h2>Learn About Me</h2>
